--- a/css/styles.css
+++ b/css/styles.css
@@ -2,7 +2,12 @@ body {
   font-family: 'Open Sans', sans-serif;
 }
 
-h1, h2, h3, h4, h5, h6 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
   font-family: 'Oxygen', sans-serif;
   font-weight: bold;
 }
@@ -26,7 +31,7 @@ div {
 
 .big-header {
   font-size: 5rem;
-  padding-bottom:3%;
+  padding-bottom: 3%;
 }
 
 .home-text {
@@ -45,7 +50,7 @@ div {
 
 .carousel-control-next,
 .carousel-control-prev {
-    filter: invert(100%);
+  filter: invert(100%);
 }
 
 .footer {
@@ -89,25 +94,16 @@ div {
 
 .modal {
   display: none;
-  /* Hidden by default */
   position: fixed;
-  /* Stay in place */
   z-index: 1;
-  /* Sit on top */
   padding-top: 100px;
-  /* Location of the box */
   left: 0;
   top: 0;
   width: 100%;
-  /* Full width */
   height: 100%;
-  /* Full height */
   overflow: auto;
-  /* Enable scroll if needed */
   background-color: rgb(0, 0, 0);
-  /* Fallback color */
   background-color: rgba(0, 0, 0, 0.9);
-  /* Black w/ opacity */
 }
 
 .modal-content {
@@ -138,6 +134,7 @@ div {
   from {
     transform: scale(0)
   }
+
   to {
     transform: scale(1)
   }
